      it
  * merged lp:~mpt/software-center/3.0-rnr-cleanup, many thanks
  * softwarecenter/db/database.py, test/test_database.py:
    - add API to get applications for a given pkgname
  * merged lp:~aaronp/software-center/reviews-tweaks
    This branch improve the feedback for the gwibber sending,
    many thanks to Aaron Peachey

  [ Kiwinote ]
  * softwarecenter/models/appstore.py:
    - fix _get_estimate_nr_apps_and_nr_pkgs() to return precise numbers
    - fix handling of nr_apps, nr_pkgs in _blocking_perform_search()
  * softwarecenter/view/softwarepane.py:
    - clean up 'disable_show_hide_nonapps' special casing, as our numbers are
      now so precise we don't need special casing

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Feb 2011 14:23:16 +0100

software-center (3.1.16) natty; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/reviews-and-netstatus
    many thanks to Matthew McGowan
  * test/test_appdetails_view.py:
    - add appdetails netstatus tests
  * merged lp:~aaronp/software-center/fix-694836, many thanks
    (LP: #694836)
  * softwarecenter/view/softwarepane.py:
    - add helper to init atk names so that mago can pick them up
  * tests/Makefile, test/mago/test_with_mago.py:
    - use new style mago for search tests and enable in auto-tests

  [ Gary Lasker ]
  * softwarecenter/distro/Ubuntu.py,
    softwarecenter/models/appstore.py:
    - fix crash if attempting to download a remote icon before
      the cache is ready (LP: #688991)
  * softwarecenter/models/appstore.py:
    - fix intermittent AttributeError in on_get_value (LP: #712170) 
    - fix attribute error when building a custom list (LP: #712888)
  * test/test_custom_lists.py:
    - add unit test for custom lists 

  [ Aaron Peachey ]
  * view/appdetailsview_gtk.py: 
     - change label to click to write a review if user already has
       a review for that package LP: #709738
     - alter review look if it belongs to current user LP: #710396
