@@ -14,7 +14,7 @@ import xapian
 from softwarecenter.db.application import Application, AppDetails
 from softwarecenter.db.database import StoreDatabase
 from softwarecenter.db.database import parse_axi_values_file
-from softwarecenter.db.update import update_from_app_install_data, update_from_var_lib_apt_lists
+from softwarecenter.db.update import update_from_app_install_data, update_from_var_lib_apt_lists, update_from_appstream_xml
 from softwarecenter.apt.aptcache import AptCache
 from softwarecenter.paths import *
 from softwarecenter.enums import *
@@ -59,6 +59,20 @@ class TestDatabase(unittest.TestCase):
         for it in db.postlist("AAUbuntu Software Zentrum"):
             i+=1
         self.assertEqual(i, 1)
+
+    def test_update_from_appstream_xml(self):
+        db = xapian.WritableDatabase("./data/test.db", 
+                                     xapian.DB_CREATE_OR_OVERWRITE)
+        res = update_from_appstream_xml(db, self.cache, "./data/app-info/")
+        self.assertTrue(res)
+        self.assertEqual(db.get_doccount(), 1)
+        # FIXME: improve tests
+        for p in db.postlist(""):
+            doc = db.get_document(p.docid)
+            for term in doc.termlist():
+                print term, term.term
+            for value in doc.values():
+                print value, value.num, value.value
 
     def test_update_from_var_lib_apt_lists(self):
         # ensure we index with german locales to test i18n
